got rid of thousand of basic errors