@@ -1,5 +1,7 @@
 package net.journey.entity.mob.pet;
 
+import java.util.UUID;
+
 import net.journey.entity.MobStats;
 import net.journey.enums.EnumSounds;
 import net.minecraft.block.Block;
@@ -7,7 +9,6 @@ import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityAgeable;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAIBeg;
 import net.minecraft.entity.ai.EntityAIFollowOwner;
 import net.minecraft.entity.ai.EntityAIHurtByTarget;
 import net.minecraft.entity.ai.EntityAILeapAtTarget;
@@ -23,30 +24,33 @@ import net.minecraft.entity.monster.EntityGhast;
 import net.minecraft.entity.passive.EntityHorse;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.projectile.EntityArrow;
-import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
-import net.minecraft.item.EnumDyeColor;
+import net.minecraft.init.SoundEvents;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemFood;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
 import net.minecraft.util.DamageSource;
+import net.minecraft.util.EnumHand;
+import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
-import net.minecraftforge.fml.relauncher.Side;
-import net.minecraftforge.fml.relauncher.SideOnly;
 import net.slayer.api.entity.EntityModTameable;
 
 public class EntityTameRoc extends EntityModTameable {
 	
 	private float headRotationCourse;
     private float headRotationCourseOld;
-    
+	private static final DataParameter<Float> DATA_HEALTH_ID = EntityDataManager.<Float>createKey(EntityTameRoc.class, DataSerializers.FLOAT);
+
 	public EntityTameRoc(World w) {
 		super(w);		
         this.tasks.addTask(1, new EntityAISwimming(this));
         this.tasks.addTask(2, this.aiSit);
         this.tasks.addTask(3, new EntityAILeapAtTarget(this, 0.4F));
-        this.tasks.addTask(4, new EntityAIAttackOnCollide(this, 1.0F, true));
+        //this.tasks.addTask(4, new EntityAIAttackOnCollide(this, 1.0F, true));
         this.tasks.addTask(5, new EntityAIFollowOwner(this, 1.0F, 10.0F, 2.0F));
         this.tasks.addTask(6, new EntityAIMate(this, 1.0F));
         this.tasks.addTask(7, new EntityAIWander(this, 1.0F));
@@ -61,36 +65,37 @@ public class EntityTameRoc extends EntityModTameable {
 	public EntityTameRoc(World w, EntityPlayer player) {
 		super(w);
 		this.setSize(1.0F, 1.0F);
-		this.setOwnerId(player.getUniqueID().toString());
+		this.setOwnerId(player.getUniqueID());
 		this.setTamed(true);
 	}
 
 	@Override
 	protected void applyEntityAttributes() {
 		super.applyEntityAttributes();
-		this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(MobStats.baseNetherHealth);
-		if(this.isTamed()) this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(MobStats.baseNetherHealth);
-		else this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(MobStats.baseNetherHealth);
-        this.getAttributeMap().registerAttribute(SharedMonsterAttributes.attackDamage);
-        this.getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue(2.0D);
+		this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(MobStats.baseNetherHealth);
+		if(this.isTamed()) this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(MobStats.baseNetherHealth);
+		else this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(MobStats.baseNetherHealth);
+        this.getAttributeMap().registerAttribute(SharedMonsterAttributes.ATTACK_DAMAGE);
+        this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(2.0D);
 	}
 
 	@Override
-	public EntityAgeable createChild(EntityAgeable var1) {
-		EntityTameRoc e = new EntityTameRoc(this.worldObj);
-		String s = this.getOwnerId();
-		if(s != null && s.trim().length() > 0) {
-			e.setOwnerId(s);
-			e.setTamed(true);
+	public EntityTameRoc createChild(EntityAgeable ageable) {
+		EntityTameRoc hopper = new EntityTameRoc(this.world);
+		UUID uuid = this.getOwnerId();
+
+		if (uuid != null) {
+			hopper.setOwnerId(uuid);
+			hopper.setTamed(true);
 		}
-		return e;
+
+		return hopper;
 	}
 
-    @Override
-	protected void updateAITasks()
-    {
-        this.dataWatcher.updateObject(18, Float.valueOf(this.getHealth()));
-    }
+	@Override
+	protected void updateAITasks() {
+		this.dataManager.set(DATA_HEALTH_ID, Float.valueOf(this.getHealth()));
+	}
     
 	@Override
 	public void setAttackTarget(EntityLivingBase par1EntityLivingBase) {
@@ -100,14 +105,13 @@ public class EntityTameRoc extends EntityModTameable {
 	}
 	
 	@Override
-    public void onLivingUpdate()
-    {
+    public void onLivingUpdate() {
         super.onLivingUpdate();
 
-        if (!this.worldObj.isRemote && !this.hasPath() && this.onGround) {
-        this.worldObj.setEntityState(this, (byte)8);
+        if (!this.world.isRemote && !this.hasPath() && this.onGround) {
+        this.world.setEntityState(this, (byte)8);
         }
-        if (!this.worldObj.isRemote && this.getAttackTarget() == null && this.isAngry()) {
+        if (!this.world.isRemote && this.getAttackTarget() == null && this.isAngry()) {
         this.setAngry(false);
         }
     }
@@ -115,20 +119,9 @@ public class EntityTameRoc extends EntityModTameable {
 	@Override
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(18, new Float(this.getHealth()));
-        this.dataWatcher.addObject(19, new Byte((byte)0));
+		this.dataManager.register(DATA_HEALTH_ID, Float.valueOf(this.getHealth()));
 	}
 
-	@Override
-	protected void updateAITick() {
-		this.dataWatcher.updateObject(18, Float.valueOf(this.getHealth()));
-	}
-
-	@Override
-	protected void playStepSound(BlockPos pos, Block b) {
-		this.playSound("mob.wolf.step", 0.15F, 1.0F);
-	}
-	
 	@Override
 	public void writeEntityToNBT(NBTTagCompound par1NBTTagCompound) {
 		super.writeEntityToNBT(par1NBTTagCompound);
@@ -142,10 +135,15 @@ public class EntityTameRoc extends EntityModTameable {
 	}
 
 	@Override
+	protected void playStepSound(BlockPos pos, Block blockIn) {
+		this.playSound(SoundEvents.ENTITY_WOLF_STEP, 0.15F, 1.0F);
+	}
+
+	@Override
 	public boolean attackEntityFrom(DamageSource par1DamageSource, float par2) {
 		if(this.isEntityInvulnerable(par1DamageSource)) return false;
 		else {
-			Entity entity = par1DamageSource.getEntity();
+			Entity entity = par1DamageSource.getImmediateSource();
 			this.aiSit.setSitting(false);
 			if(entity != null && !(entity instanceof EntityPlayer) && !(entity instanceof EntityArrow))            
 				par2 = (par2 + 1.0F) / 2.0F;
@@ -163,112 +161,79 @@ public class EntityTameRoc extends EntityModTameable {
 	@Override
 	public void setTamed(boolean par1) {
 		super.setTamed(par1);
-		if(par1) this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(MobStats.baseNetherHealth);
-		else this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(MobStats.baseNetherHealth);
-		this.getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue(8.0D);
+		if(par1) this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(MobStats.baseNetherHealth);
+		else this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(MobStats.baseNetherHealth);
+		this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(8.0D);
 	}
-	
-	@Override
-    public void mountPlayer(EntityPlayer player)
-    {
-        player.rotationYaw = this.rotationYaw;
-        player.rotationPitch = this.rotationPitch;
-
-        if (!this.worldObj.isRemote)
-        {
-            player.mountEntity(this);
-        }
-    }
 
 	@Override
-	public boolean interact(EntityPlayer par1EntityPlayer) {
-		ItemStack itemstack = par1EntityPlayer.inventory.getCurrentItem();
+	public boolean processInteract(EntityPlayer player, EnumHand hand) {
+		ItemStack itemstack = player.getHeldItem(hand);
 
-		if(this.isTamed()) {
-			if(itemstack != null) {
-				if(itemstack.getItem() instanceof ItemFood) {
-					ItemFood itemfood = (ItemFood)itemstack.getItem();
-					if(itemfood.isWolfsFavoriteMeat() && this.dataWatcher.getWatchableObjectFloat(18) < 75.0F) {
-						if(!par1EntityPlayer.capabilities.isCreativeMode)
-							--itemstack.stackSize;            
-						this.heal(itemfood.getHealAmount(itemstack));
-						if(itemstack.stackSize <= 0)
-							par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem,(ItemStack)null);
+		if (this.isTamed()) {
+			if (!itemstack.isEmpty()) {
+				if (itemstack.getItem() == Items.APPLE) {
+					Item itemfood = Items.APPLE;
+
+					if (((Float)this.dataManager.get(DATA_HEALTH_ID)).floatValue() < 20.0F) {
+						if (!player.capabilities.isCreativeMode) {
+							itemstack.shrink(1);
+						}
+						this.heal(5);
 						return true;
 					}
 				}
+
+				if (this.isOwner(player) && !this.world.isRemote && !this.isBreedingItem(itemstack)) {
+					this.aiSit.setSitting(!this.isSitting());
+					this.isJumping = false;
+					this.navigator.clearPath();
+					this.setAttackTarget((EntityLivingBase)null);
+				}
 			}
+			else if (itemstack.getItem() == Items.BREAD && !this.isAngry()) {
+				if (!player.capabilities.isCreativeMode) {
+					itemstack.shrink(1);
+				}
 
-			if(isOwner(par1EntityPlayer) && !this.worldObj.isRemote && !this.isBreedingItem(itemstack)) {
-				this.aiSit.setSitting(!this.isSitting());
-				this.isJumping = false;
-				this.navigator.clearPathEntity();
-				this.setAttackTarget((EntityLivingBase)null);
-			}
-			
-			if(itemstack != null && itemstack.getItem() == Items.bread && !this.isAngry()) {
-				if(!par1EntityPlayer.capabilities.isCreativeMode)    
-					--itemstack.stackSize;
-
-				if(itemstack.stackSize <= 0) par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem,(ItemStack)null);
-
-				if(!this.worldObj.isRemote) {
-					if(this.rand.nextInt(3) == 0) {
-						this.navigator.clearPathEntity();
+				if (!this.world.isRemote) {
+					if (this.rand.nextInt(3) == 0 && !net.minecraftforge.event.ForgeEventFactory.onAnimalTame(this, player)) {
+						this.setTamedBy(player);
+						this.navigator.clearPath();
 						this.setAttackTarget((EntityLivingBase)null);
 						this.aiSit.setSitting(true);
-						this.setHealth(75.0F);
-						this.setOwnerId(par1EntityPlayer.getUniqueID().toString());
-						this.setTamed(true);
+						this.setHealth(20.0F);
 						this.playTameEffect(true);
-						this.worldObj.setEntityState(this,(byte)7);
+						this.world.setEntityState(this, (byte)7);
 					} else {
 						this.playTameEffect(false);
-						this.worldObj.setEntityState(this,(byte)6);
+						this.world.setEntityState(this, (byte)6);
 					}
-			
-			if (!this.worldObj.isRemote)
-            {
-                if (this.rand.nextInt(3) == 0)
-                {
-                    this.setTamed(true);
-                    this.navigator.clearPathEntity();
-                    this.setAttackTarget((EntityLivingBase)null);
-                    this.aiSit.setSitting(true);
-                    this.setHealth(75.0F);
-                    this.setOwnerId(par1EntityPlayer.getUniqueID().toString());
-                    this.playTameEffect(true);
-                    this.worldObj.setEntityState(this, (byte)7);
-                }
-                else
-                {
-                    this.playTameEffect(false);
-                    this.worldObj.setEntityState(this, (byte)6);
-                }
-            }
+				}
 
-            return true;
+				return true;
 			}
 		}
-	}
-	return super.interact(par1EntityPlayer);
+		return super.processInteract(player, hand);
 	}
 
 	@Override
 	public boolean isBreedingItem(ItemStack i) {
-		return i == null ? false : i.getItem() == Items.bread;
+		return i == null ? false : i.getItem() == Items.BREAD;
 	}
 
-	@Override
 	public boolean isAngry() {
-		return(this.dataWatcher.getWatchableObjectByte(16) & 2) != 0;
+		return (((Byte)this.dataManager.get(TAMED)).byteValue() & 2) != 0;
 	}
 
-	@Override
-	public void setAngry(boolean b) {
-		byte b0 = this.dataWatcher.getWatchableObjectByte(16);
-		if(b) this.dataWatcher.updateObject(16, Byte.valueOf((byte)(b0 | 2)));
-		else this.dataWatcher.updateObject(16, Byte.valueOf((byte)(b0 & -3)));
+	public void setAngry(boolean angry) {
+		byte b0 = ((Byte)this.dataManager.get(TAMED)).byteValue();
+
+		if (angry) {
+			this.dataManager.set(TAMED, Byte.valueOf((byte)(b0 | 2)));
+		} else {
+			this.dataManager.set(TAMED, Byte.valueOf((byte)(b0 & -3)));
+		}
 	}
 
 	@Override
@@ -293,22 +258,17 @@ public class EntityTameRoc extends EntityModTameable {
 	}
 
 	@Override
-	public String setLivingSound() {
-		return EnumSounds.BIRD.getNonPrefixedName();
+	public EnumSounds setLivingSound() {
+		return EnumSounds.BIRD;
 	}
 
 	@Override
-	public String setHurtSound() {
-		return EnumSounds.BIRD_HURT.getNonPrefixedName();
+	public EnumSounds setHurtSound() {
+		return EnumSounds.BIRD_HURT;
 	}
 
 	@Override
-	public String setDeathSound() {
-		return EnumSounds.BIRD_DEATH.getNonPrefixedName();
+	public EnumSounds setDeathSound() {
+		return EnumSounds.BIRD_DEATH;
 	}
-	
-    public boolean allowLeashing()
-    {
-        return !this.isAngry() && super.allowLeashing();
-    }
 }
